--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     font-family: "Poppins",
 }
 .bg {
-    background: url('./assets/img/background2.png');
+    background: url('./assets/img/Logo/background2.png');
     background-size: cover;
     background-position: center;
     height: 70vh;
