--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ body {
     height: 70vh;
 
 }
+@media (max-width: 768px) {
+  .bg {
+    height: 50vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .bg {
+    height: 40vh;
+  }
+}
